# io-m2dir

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: base64.rs  client.rs  coroutine.rs  entry.rs  flag.rs  fnv.rs  lib.rs  m2dir.rs  m2store.rs  parse.rs  path.rs  percent.rs  rand.rs  store.rs
src/coroutines/: flag_add.rs  flag_remove.rs  flag_set.rs  flags_add.rs  flags_remove.rs  flags_set.rs  mailbox_create.rs  mailbox_delete.rs  mailbox_list.rs  message_delete.rs  message_get.rs  message_list.rs  message_store.rs  mod.rs
src/entry/: delete.rs  get.rs  list.rs  mod.rs  store.rs  types.rs  utils.rs
src/flag/: add.rs  mod.rs  remove.rs  set.rs  types.rs
src/m2dir/: create.rs  delete.rs  list.rs  mod.rs  parse.rs  types.rs  utils.rs
tests/: integration.rs
