[package]
name = "io-m2dir"
description = "Sans-I/O coroutines for the m2dir mail storage format, with optional blocking std client."
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
edition = "2024"
rust-version = "1.87"
license = "LGPL-3.0-or-later"
categories = ["email", "filesystem"]
keywords = ["email", "m2dir", "client", "io-free"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-m2dir/latest/io_m2dir"
repository = "https://github.com/pimalaya/io-m2dir"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client"]
client = []

[dev-dependencies]
tempfile = "3"

[dependencies]
log = "0.4"
thiserror = "2"
