[package]
name = "io-m2dir"
description = "M2dir client library"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
categories = ["email", "filesystem"]
keywords = ["email", "m2dir", "client", "io-free", "pim"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-m2dir/latest/io_m2dir"
repository = "https://github.com/pimalaya/io-m2dir"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client"]
client = ["dep:mail-parser"]

[dev-dependencies]
tempfile = "3"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
mail-parser = { version = "0.11", default-features = false, optional = true }
percent-encoding = { version = "2", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
